# PreScale

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  cloudbuild-cost.yaml  cloudbuild.yaml  commits.txt  docker-compose.yml  helios-agent-gcp.yaml  helios-agent.yaml  helios-agent.yaml.example  locust_requests.csv  locust_stats.html  prescale-agent-gcp.yaml  prescale-agent.yaml  prescale-agent.yaml.example  prometheus-local.yaml  pyproject.toml  render.yaml  test_retrain.ps1
.github/workflows/: ci.yml  helm-pages.yml  release.yml
agent/: README.md  agent.py  pyproject.toml  pytest.ini
agent/src/helios_agent/: __init__.py  cli.py  config.py
agent/src/prescale_agent/: __init__.py  agent.py  cli.py  client.py  config.py
agent/tests/: __init__.py  test_agent.py
artifacts/: data_summary_20260111_024713.json  metrics_20260111_024713.json
charts/helios/: Chart.yaml  README.md  values.yaml
charts/helios/templates/: _helpers.tpl  cost-intelligence-deployment.yaml  cost-intelligence-service.yaml  inference-deployment.yaml  inference-hpa.yaml  inference-service.yaml  ingress.yaml  pdb.yaml  pvc.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/prescale/: Chart.yaml  README.md  values.yaml
charts/prescale/templates/: _helpers.tpl  cost-intelligence-deployment.yaml  cost-intelligence-service.yaml  inference-deployment.yaml  inference-hpa.yaml  inference-service.yaml  ingress.yaml  pdb.yaml  pvc.yaml  serviceaccount.yaml  servicemonitor.yaml
cli/: README.md  pyproject.toml
cli/src/helios_cli/: __init__.py  main.py
cli/src/helios_cli/commands/: config.py  detect.py  predict.py  recommend.py  status.py
cli/src/prescale_cli/: __init__.py  audit.py  compare.py  investigate.py  live.py  loadtest.py  main.py  mcp_server.py  mcp_tools.py  profiles.py  render.py  report.py  result.py
cli/src/prescale_cli/commands/: agent.py  audit.py  compare.py  config.py  detect.py  history.py  investigate.py  mcp.py  predict.py  profiles.py  recommend.py  run.py  schema.py  show.py  status.py
cli/src/prescale_cli/schema/: __init__.py  result.schema.json
cli/tests/: __init__.py  test_audit.py  test_cli.py  test_compare.py  test_history_show.py  test_investigate.py  test_live.py  test_loadtest.py  test_mcp.py  test_profiles.py  test_report.py  test_result.py
demo/: README.md  make-demo.sh  sim.py
docs/: INTEGRATION.md  QUICKSTART.md  cloudwatch_testing_guide.md  deployment_to_gcp_vm.md  gcp_agent_guide.md  gcp_full_setup_guide.md  gcp_testing_guide.md  phase5-design.md  real_world_testing.md  research_infra_chat.md  user_journey_gcp_locust.md  user_scenarios.md
docs/architecture/: ARCHITECTURE.md
examples/: README.md  fragile-shop.py
examples/demo-environment/loadtest/: README.md  probe_metrics.py
infra/: DEPLOYMENT.md
infra/grafana/dashboards/: helios-inference.json  prescale-inference.json
infra/kubernetes/helios-cost/: configmap.yaml  deployment.yaml
infra/kubernetes/helios-inference/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pod-monitoring.yaml  prometheus-rules.yaml  service.yaml  serviceaccount.yaml
infra/kubernetes/keda/: kustomization.yaml  scaledobject-helios.yaml  scaledobject-prescale.yaml  scaledobject-saleor.yaml  trigger-auth.yaml
infra/kubernetes/monitoring/: grafana-dashboards.yaml  grafana.yaml  pod-monitoring.yaml  values-prometheus.yaml
infra/kubernetes/prescale-cost/: configmap.yaml  deployment.yaml
infra/kubernetes/prescale-inference/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pod-monitoring.yaml  prometheus-rules.yaml  service.yaml  serviceaccount.yaml
infra/prometheus/: prometheus.yml
k8s/: locust-exporter.yaml
landing-page/: .gitignore  index.html  package-lock.json  package.json
landing-page/app/: App.tsx  main.tsx
landing-page/app/components/: CTA.tsx  (+15 more)
landing-page/public/: hero.webm  llms.txt  robots.txt  sitemap.xml
landing-page/src/: App.tsx  chrome.tsx  index.css
landing-page/styles/: fonts.css  index.css  theme.css
locust-exporter/: app.py  requirements.txt
ml/: __init__.py  check_data.py  cloudbuild.yaml  config.py  fetch_real_data.py  list_metrics.py  requirements.txt  test_fetch.py  train.py
ml/artifacts/: data_summary_20251231_172304.json  data_summary_20251231_174808.json  data_summary_20251231_184446.json  data_summary_20251231_184526.json  data_summary_20251231_184618.json  metrics_20251231_172304.json  metrics_20251231_174808.json  metrics_20251231_184446.json  metrics_20251231_184526.json  metrics_20251231_184618.json
ml/cost_intelligence/: Dockerfile  __init__.py  app.py  config.py  cost_calculator.py  efficiency.py  forecaster.py  models.py  requirements.txt  savings_analyzer.py
ml/data/: training_data_24h.csv  training_data_real.csv
ml/inference/: Dockerfile  __init__.py  app.py  config.py  db.py  metrics.py  model_manager.py  models.py  requirements.txt  retrain_scheduler.py
ml/models/: __init__.py  baseline.py  prophet_model.py  xgboost_anomaly.py
ml/pipeline/: __init__.py  cloudwatch_fetcher.py  data_fetcher.py  feature_engineering.py
ml/scripts/: create_demo_models.py
ml/tests/: __init__.py  test_models.py
ml/training/: train_models.py
scripts/: check_image_modules.py  setup.ps1  setup.sh
specs/: M0-result-contract.md  M1-harden-verdict.md  M2-mcp-server.md  M3-investigate.md  M4-regression-ci.md  M5-launch-profiles.md
(+64 files in other folders)
