[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prescale"
version = "0.2.0"
description = "Launch-readiness load testing for developers - find what breaks before your users do"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Mujeeb Lawal-Saka", email = "lawalsakamujeeb@gmail.com"}
]
keywords = [
    "load-testing",
    "performance",
    "stress-test",
    "cli",
    "devtools",
    "launch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Traffic Generation",
]

dependencies = [
    "click>=8.0.0",
    "httpx[http2]>=0.24.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
prescale = "prescale_cli.main:cli"

[project.urls]
Homepage = "https://github.com/pyjeebz/prescale"
Repository = "https://github.com/pyjeebz/prescale"
Issues = "https://github.com/pyjeebz/prescale/issues"

[tool.setuptools.packages.find]
where = ["cli/src"]

[tool.setuptools.package-dir]
"" = "cli/src"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["prescale_cli"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
